--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "construction-app",
+  "name": "akbansalco",
+  "homepage": "http://akbansalcompany.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
