--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-image-and-background-image-fade": "^1.0.8",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
