--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-image-and-background-image-fade": "^1.0.8",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "sass": "^1.57.0",
