--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-lazy-load": "^4.0.1",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.6.1",
