--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-error-boundary": "^3.1.4",
     "react-lazy-load": "^4.0.1",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "sass": "^1.57.0",
